...
        android:layout_height="5dp"
        android:layout_alignParentTop="true"
        android:background="@color/design_default_color_primary"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/btnHeaderFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/editor_toolbar"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_edit" />


    <com.agileburo.anytype.feature_editor.ui.ClearFocusEditText
        android:id="@+id/textHeaderFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/btnHeaderFour"
        android:background="@android:color/transparent"
...
